fixing overflow on animation at "/"

--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -10,8 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // position: relative;
-  // overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .hero {
